Title error was there

--- a/LEADSCORE_ANKUR_ANKAN_ANKIT.ipynb
+++ b/LEADSCORE_ANKUR_ANKAN_ANKIT.ipynb
@@ -5,12 +5,12 @@
    "id": "f10767d9",
    "metadata": {},
    "source": [
-    "# LEAD SCORE DATA PROCESSING "
+    "# LEAD SCORE CASE STUDY"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "ca48dda9",
+   "id": "4706fe5a",
    "metadata": {},
    "source": [
     "## PROBLEM STATEMENT :\n",
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bb768d9b",
+   "id": "0ecd2934",
    "metadata": {},
    "source": [
     "## GOALS OF CASE STUDY\n",
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a8b1bf39",
+   "id": "6a7a7ab6",
    "metadata": {},
    "source": [
     "## STEP 1: IMPORTING AND INSPECTING DATASET "
@@ -639,7 +639,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b280d2a7",
+   "id": "aae3b929",
    "metadata": {},
    "source": [
     "#### PRESERVING Lead Number for assigning Lead Score to each of them ."
@@ -1416,7 +1416,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e4d82945",
+   "id": "669fdefa",
    "metadata": {},
    "source": [
     "#### INSIGHT: There are almost 7 variables which are having more than 40% null values so we need to drop these."
@@ -2744,7 +2744,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1f6bd0de",
+   "id": "6bffb6bd",
    "metadata": {},
    "source": [
     "#### After checking the value counts presence in each variables there are some varaiables having 2 value_counts let us do analysis on that and drop them if required"
@@ -2753,7 +2753,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "9cc6bd48",
+   "id": "6b56d6ab",
    "metadata": {},
    "outputs": [
     {
@@ -2777,7 +2777,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "16e38075",
+   "id": "efcc7849",
    "metadata": {},
    "outputs": [
     {
@@ -2801,7 +2801,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "500121d7",
+   "id": "834518e2",
    "metadata": {},
    "outputs": [
     {
@@ -2824,7 +2824,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "4c066524",
+   "id": "52e1a81b",
    "metadata": {},
    "outputs": [
     {
@@ -2847,7 +2847,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "0058c341",
+   "id": "0e5f1751",
    "metadata": {},
    "outputs": [
     {
@@ -2870,7 +2870,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "71a2d5f9",
+   "id": "5600643d",
    "metadata": {},
    "outputs": [
     {
@@ -2893,7 +2893,7 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "6e7ef968",
+   "id": "5dab2113",
    "metadata": {},
    "outputs": [
     {
@@ -2916,7 +2916,7 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "id": "e3c0370d",
+   "id": "7f6620ed",
    "metadata": {},
    "outputs": [
     {
@@ -2939,7 +2939,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "a55d4d82",
+   "id": "2e2ed0fc",
    "metadata": {},
    "outputs": [
     {
@@ -3020,7 +3020,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dc7df5d4",
+   "id": "4b4d92d6",
    "metadata": {},
    "source": [
     "#### INSIGHT: After performing data cleaning we are prepared with 13 variables with 0 null value presence in them and good to perform EDA."
@@ -3123,7 +3123,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ddfc42f8",
+   "id": "3ac2c1a1",
    "metadata": {},
    "source": [
     "#### INSIGHT: Customers through reference and wellngak website  have high conversion rate of around 490 and 140 respectively"
@@ -3173,7 +3173,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f72d4332",
+   "id": "60562285",
    "metadata": {},
    "source": [
     "#### INSIGHTS: Customers whoese last activity is eithier email opened or sms sent have higher conversion rates"
@@ -3223,7 +3223,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0ffa801c",
+   "id": "c8cd84e8",
    "metadata": {},
    "source": [
     "#### INSIGHTS: Customers which are working professionals are having higher conversion rates of around 647"
@@ -3252,7 +3252,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "93d24c5a",
+   "id": "a41734b5",
    "metadata": {},
    "source": [
     "#### INSIGHTS: Customers will revert after reading the email have higher conversion rate around 2007"
@@ -3302,7 +3302,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4598d507",
+   "id": "2e7a8b0a",
    "metadata": {},
    "source": [
     "#### INSIGHTS: Customers whoese sms sents are last activity performed by the lead generators are higher conversion amount of data."
@@ -3318,7 +3318,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7beb5d8f",
+   "id": "2287c00c",
    "metadata": {},
    "source": [
     "### CHECKING IMBALANCE OF DATASET"
@@ -3371,7 +3371,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ce617e67",
+   "id": "cabe1569",
    "metadata": {},
    "source": [
     "#### We observe that only 38% of the leads are converted, where as 62% are not converted. There exists data imbalance in the dataset. The data is biased towards leads that are not converted."
@@ -3538,7 +3538,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "843c3cef",
+   "id": "3bd61ad7",
    "metadata": {},
    "source": [
     "#### INSIGHT : No outlier for this variable so no need for anykind of treatment."
@@ -3729,7 +3729,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b769b881",
+   "id": "4f9b55b2",
    "metadata": {},
    "source": [
     "### 3.3 BIVARIATE ANALYSIS FOR NUMERICAL VARIABLES"
@@ -7989,7 +7989,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "802ce35f",
+   "id": "00d4e5af",
    "metadata": {},
    "source": [
     "#### As VIF is higher than 5 for Occupation_unemployed we will drop and again build a new model version"
@@ -8395,7 +8395,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f0dd0b04",
+   "id": "216c50f6",
    "metadata": {},
    "source": [
     "#### Now VIF of all the variables of the model are less than 5 and stable for model as Last_Notable_Activity_resubscribed to emails have higher p-value so we need to eliminate it and check other p-values  "
@@ -8768,7 +8768,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2fccc53d",
+   "id": "28d313b7",
    "metadata": {},
    "source": [
     "#### As we can check p-values for 'Occupation_student','Tags_Others tags' are higher than 0.05 still so we need to eliminate that variable and VIF is stable ."
@@ -11912,7 +11912,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f14efa38",
+   "id": "d427c5fe",
    "metadata": {},
    "source": [
     "## STEP 6: ASSIGNING LEAD SCORE TO DATA SET"
@@ -12967,7 +12967,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "259c8765",
+   "id": "963501e2",
    "metadata": {},
    "source": [
     "### 6.2 CONCLUSION"
@@ -12975,7 +12975,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8dabaffc",
+   "id": "ff06b69b",
    "metadata": {},
    "source": [
     "### INSIGHT: \n",
@@ -12994,7 +12994,7 @@
   {
    "cell_type": "code",
    "execution_count": 221,
-   "id": "eb2d8e0a",
+   "id": "eef9d8dc",
    "metadata": {},
    "outputs": [
     {
